# Task-5-SQL

./: .gitignore
Task-5-SQL/: CMakeLists.txt  main.cpp
Task-5-SQL.xcodeproj/: project.pbxproj
Task-5-SQL.xcodeproj/xcuserdata/margaret.xcuserdatad/xcschemes/: xcschememanagement.plist
